--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,15 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.a19osamn.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/Aboutss"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never"/>
-    <item
-        android:id="@+id/action_refresh"
-        android:orderInCategory="10"
-        android:title="@string/action_refresh"
-        app:showAsAction="never"/>
+        android:title="@string/about_us"
+        app:showAsAction="never" />
 
 </menu>
